--- a/html/basic.html
+++ b/html/basic.html
@@ -2120,6 +2120,11 @@ function</h2>
 ## [1] 2108</code></pre>
 <p>Tips. <code>{ }</code> の中が1行だけの場合は <code>{ }</code>
 を省略できる．</p>
+<pre class="r"><code>for (y in 2090:2110) if (is_leap(year = y)) print(y)</code></pre>
+<pre><code>## [1] 2092
+## [1] 2096
+## [1] 2104
+## [1] 2108</code></pre>
 <!--
 中級者向け
 (2090:2110)[sapply(2090:2110, is_leap)]
