--- a/html/card1994.html
+++ b/html/card1994.html
@@ -1721,9 +1721,9 @@ Pennsylvania</a>, American Economic Review 84(4): 772-793.</p>
 $5.05）一方で，隣接するペンシルベニア州ではとどめ置かれた．
 これを自然実験とみなし，DIDの枠組みを利用する．
 ファストフード店の雇用に関する調査データを用いて，最低賃金の引き上げによって雇用がほとんど変化しなかったことを明らかにした．</p>
-<div id="replication-by-others" class="section level2" number="1.1">
-<h2><span class="header-section-number">1.1</span> Replication by
-others</h2>
+<div id="reproductionreplication-by-others" class="section level2" number="1.1">
+<h2><span class="header-section-number">1.1</span>
+Reproduction/Replication by others</h2>
 <ul>
 <li>Aaron Mamula (2021) <a href="https://aaronmams.github.io/Card-Krueger-Replication/">Replicating
 Card and Krueger’s Minimum Wage Study in R</a></li>
