--- a/html/did.html
+++ b/html/did.html
@@ -2472,7 +2472,7 @@ head(kielmc, 2)</code></pre>
 <th align="center">Variable</th>
 <th align="center">Control (<code>nearinc == 0</code>)</th>
 <th align="center">Treatment (<code>nearinc == 1</code>)</th>
-<th align="center">Difference: NJ-PA</th>
+<th align="center">Difference: Near-Far</th>
 </tr>
 </thead>
 <tbody>
