--- a/html/did.html
+++ b/html/did.html
@@ -1799,9 +1799,9 @@ Individual-fixed effect</h2>
 <div id="within-fixed-effect-estimation" class="section level3" number="1.3.1">
 <h3><span class="header-section-number">1.3.1</span> Within (fixed
 effect) estimation</h3>
-<p><span class="math inline">\(\dot{y}\)</span> を demean (over
-individual) した変数 (<span class="math inline">\(\dot{y}_{it} = y_{it}
-- \bar{y}_i\)</span>) とすると，モデルは以下のようになる．</p>
+<p><span class="math inline">\(\dot{y}\)</span> を demean (over time)
+した変数 (<span class="math inline">\(\dot{y}_{it} = y_{it} -
+\bar{y}_i\)</span>) とすると，モデルは以下のようになる．</p>
 <p><span class="math display">\[ \dot{y}_{it} = \beta_1 \dot{x}_{it} +
 \dot{\epsilon}_{it} \]</span></p>
 <div id="demean-by-hand" class="section level4" number="1.3.1.1">
