--- a/html/iv.html
+++ b/html/iv.html
@@ -1705,7 +1705,7 @@ border-radius: 0px;
 <h1 class="title toc-ignore">Data Analysis Using Statistical Packages:
 Instrumental Variables</h1>
 <h4 class="author">Sho Kuroda / 黒田翔</h4>
-<h4 class="date">2024年4月 (Last update: 2024年4月)</h4>
+<h4 class="date">2024年4月 (Last update: 2024年5月)</h4>
 
 </div>
 
@@ -1766,7 +1766,7 @@ y)}{cov(z, x)} \]</span></p>
 instrument する</li>
 </ul>
 <p><span class="math display">\[ \mbox{First stage:} \quad
-\log(\mbox{Education}) = \gamma_0 + \gamma_1  (\mbox{Father&#39;s
+(\mbox{Education}) = \gamma_0 + \gamma_1  (\mbox{Father&#39;s
 education}) + v \]</span> <span class="math display">\[ \mbox{Second
 stage:} \quad \log(\mbox{Wage}) = \beta_0 + \beta_1 (\mbox{Education}) +
 u \]</span></p>
